--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -32,6 +32,22 @@
   >
     Преподаватель
   </button>
+  <button
+    class="nav_bar_button"
+    routerLink="/replacements"
+    routerLinkActive="active"
+    [routerLinkActiveOptions]="{ exact: true }"
+  >
+    Замены
+  </button>
+  <button
+    class="nav_bar_button"
+    routerLink="/session"
+    routerLinkActive="active"
+    [routerLinkActiveOptions]="{ exact: true }"
+  >
+    Сессия
+  </button>
 </nav>
 <!-- <nav class="nav">
   <div class="main-menu-list">
